# cortx-motr-galois

./: .gitignore  CODEOWNERS  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac  galois.c  galois.h  galois.spec.in
.github/workflows/: codeql-analysis.yml
doc/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in
include/galois/: Makefile.am  Makefile.in  galois.h
src/: Makefile.am  Makefile.in  galois.c  gf_basic_tester.c  gf_div.c  gf_ilog.c  gf_inverse.c  gf_log.c  gf_mult.c  gf_xor.c  gf_xor_tester.c
src/linux_kernel/: Makefile.in
